// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`List component test Test Dynamic container list output (snapshot) 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body
    theme="dark"
  >
    <div>
      <div
        __self="[object Object]"
        __source="[object Object]"
        class="msg treeGrid dynamicList"
        id="list3"
      />
    </div>
  </body>,
  "container": <div>
    <div
      __self="[object Object]"
      __source="[object Object]"
      class="msg treeGrid dynamicList"
      id="list3"
    />
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`List component test Test Static container list output (snapshot) 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body
    theme="dark"
  >
    <div>
      <div
        __self="[object Object]"
        __source="[object Object]"
        class="msg container fixedScrollbar list"
        style="flex-direction: column; align-items: flex-start;"
      >
        <div
          __self="[object Object]"
          __source="[object Object]"
          class="msg container fixedScrollbar verticalCenterContent"
          data="[object Object]"
          id="list0"
          style="flex-direction: row;"
        >
          <img
            __self="[object Object]"
            __source="[object Object]"
            class="msg image"
            data="[object Object]"
            id="img"
            src="blob.svg"
          />
          <label
            __self="[object Object]"
            __source="[object Object]"
            class="msg label"
            data="[object Object]"
            data-tooltip="expand"
            id="containerLabel1"
          />
          <label
            __self="[object Object]"
            __source="[object Object]"
            class="msg label"
            data="[object Object]"
            data-tooltip="expand"
            id="containerLabel2"
            style="font-weight: 800; color: yellowgreen; margin-left: 12px;"
          />
        </div>
        <div
          __self="[object Object]"
          __source="[object Object]"
          class="msg container fixedScrollbar verticalCenterContent"
          data="[object Object]"
          id="list1"
          style="flex-direction: row;"
        >
          <img
            __self="[object Object]"
            __source="[object Object]"
            class="msg image"
            data="[object Object]"
            id="img"
            src="blob.svg"
          />
          <label
            __self="[object Object]"
            __source="[object Object]"
            class="msg label"
            data="[object Object]"
            data-tooltip="expand"
            id="containerLabel1"
          />
          <label
            __self="[object Object]"
            __source="[object Object]"
            class="msg label"
            data="[object Object]"
            data-tooltip="expand"
            id="containerLabel2"
            style="font-weight: 800; color: yellowgreen; margin-left: 12px;"
          />
        </div>
        <div
          __self="[object Object]"
          __source="[object Object]"
          class="msg container fixedScrollbar verticalCenterContent"
          data="[object Object]"
          id="list2"
          style="flex-direction: row;"
        >
          <img
            __self="[object Object]"
            __source="[object Object]"
            class="msg image"
            data="[object Object]"
            id="img"
            src="blob.svg"
          />
          <label
            __self="[object Object]"
            __source="[object Object]"
            class="msg label"
            data="[object Object]"
            data-tooltip="expand"
            id="containerLabel1"
          />
          <label
            __self="[object Object]"
            __source="[object Object]"
            class="msg label"
            data="[object Object]"
            data-tooltip="expand"
            id="containerLabel2"
            style="font-weight: 800; color: yellowgreen; margin-left: 12px;"
          />
        </div>
        <div
          __self="[object Object]"
          __source="[object Object]"
          class="msg container fixedScrollbar verticalCenterContent"
          data="[object Object]"
          id="list3"
          style="flex-direction: row;"
        >
          <img
            __self="[object Object]"
            __source="[object Object]"
            class="msg image"
            data="[object Object]"
            id="img"
            src="blob.svg"
          />
          <label
            __self="[object Object]"
            __source="[object Object]"
            class="msg label"
            data="[object Object]"
            data-tooltip="expand"
            id="containerLabel1"
          />
          <label
            __self="[object Object]"
            __source="[object Object]"
            class="msg label"
            data="[object Object]"
            data-tooltip="expand"
            id="containerLabel2"
            style="font-weight: 800; color: yellowgreen; margin-left: 12px;"
          />
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      __self="[object Object]"
      __source="[object Object]"
      class="msg container fixedScrollbar list"
      style="flex-direction: column; align-items: flex-start;"
    >
      <div
        __self="[object Object]"
        __source="[object Object]"
        class="msg container fixedScrollbar verticalCenterContent"
        data="[object Object]"
        id="list0"
        style="flex-direction: row;"
      >
        <img
          __self="[object Object]"
          __source="[object Object]"
          class="msg image"
          data="[object Object]"
          id="img"
          src="blob.svg"
        />
        <label
          __self="[object Object]"
          __source="[object Object]"
          class="msg label"
          data="[object Object]"
          data-tooltip="expand"
          id="containerLabel1"
        />
        <label
          __self="[object Object]"
          __source="[object Object]"
          class="msg label"
          data="[object Object]"
          data-tooltip="expand"
          id="containerLabel2"
          style="font-weight: 800; color: yellowgreen; margin-left: 12px;"
        />
      </div>
      <div
        __self="[object Object]"
        __source="[object Object]"
        class="msg container fixedScrollbar verticalCenterContent"
        data="[object Object]"
        id="list1"
        style="flex-direction: row;"
      >
        <img
          __self="[object Object]"
          __source="[object Object]"
          class="msg image"
          data="[object Object]"
          id="img"
          src="blob.svg"
        />
        <label
          __self="[object Object]"
          __source="[object Object]"
          class="msg label"
          data="[object Object]"
          data-tooltip="expand"
          id="containerLabel1"
        />
        <label
          __self="[object Object]"
          __source="[object Object]"
          class="msg label"
          data="[object Object]"
          data-tooltip="expand"
          id="containerLabel2"
          style="font-weight: 800; color: yellowgreen; margin-left: 12px;"
        />
      </div>
      <div
        __self="[object Object]"
        __source="[object Object]"
        class="msg container fixedScrollbar verticalCenterContent"
        data="[object Object]"
        id="list2"
        style="flex-direction: row;"
      >
        <img
          __self="[object Object]"
          __source="[object Object]"
          class="msg image"
          data="[object Object]"
          id="img"
          src="blob.svg"
        />
        <label
          __self="[object Object]"
          __source="[object Object]"
          class="msg label"
          data="[object Object]"
          data-tooltip="expand"
          id="containerLabel1"
        />
        <label
          __self="[object Object]"
          __source="[object Object]"
          class="msg label"
          data="[object Object]"
          data-tooltip="expand"
          id="containerLabel2"
          style="font-weight: 800; color: yellowgreen; margin-left: 12px;"
        />
      </div>
      <div
        __self="[object Object]"
        __source="[object Object]"
        class="msg container fixedScrollbar verticalCenterContent"
        data="[object Object]"
        id="list3"
        style="flex-direction: row;"
      >
        <img
          __self="[object Object]"
          __source="[object Object]"
          class="msg image"
          data="[object Object]"
          id="img"
          src="blob.svg"
        />
        <label
          __self="[object Object]"
          __source="[object Object]"
          class="msg label"
          data="[object Object]"
          data-tooltip="expand"
          id="containerLabel1"
        />
        <label
          __self="[object Object]"
          __source="[object Object]"
          class="msg label"
          data="[object Object]"
          data-tooltip="expand"
          id="containerLabel2"
          style="font-weight: 800; color: yellowgreen; margin-left: 12px;"
        />
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`List component test Test Static unordered list output (snapshot) 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body
    theme="dark"
  >
    <div>
      <ul
        __self="[object Object]"
        __source="[object Object]"
        class="msg list"
      >
        <li
          __self="[object Object]"
          __source="[object Object]"
        >
          <label
            __self="[object Object]"
            __source="[object Object]"
            class="msg label"
            data="[object Object]"
            data-tooltip="expand"
            id="list0"
          />
        </li>
        <li
          __self="[object Object]"
          __source="[object Object]"
        >
          <label
            __self="[object Object]"
            __source="[object Object]"
            class="msg label"
            data="[object Object]"
            data-tooltip="expand"
            id="list1"
          />
        </li>
        <li
          __self="[object Object]"
          __source="[object Object]"
        >
          <label
            __self="[object Object]"
            __source="[object Object]"
            class="msg label"
            data="[object Object]"
            data-tooltip="expand"
            id="list2"
          />
        </li>
        <li
          __self="[object Object]"
          __source="[object Object]"
        >
          <label
            __self="[object Object]"
            __source="[object Object]"
            class="msg label"
            data="[object Object]"
            data-tooltip="expand"
            id="list3"
          />
        </li>
      </ul>
    </div>
  </body>,
  "container": <div>
    <ul
      __self="[object Object]"
      __source="[object Object]"
      class="msg list"
    >
      <li
        __self="[object Object]"
        __source="[object Object]"
      >
        <label
          __self="[object Object]"
          __source="[object Object]"
          class="msg label"
          data="[object Object]"
          data-tooltip="expand"
          id="list0"
        />
      </li>
      <li
        __self="[object Object]"
        __source="[object Object]"
      >
        <label
          __self="[object Object]"
          __source="[object Object]"
          class="msg label"
          data="[object Object]"
          data-tooltip="expand"
          id="list1"
        />
      </li>
      <li
        __self="[object Object]"
        __source="[object Object]"
      >
        <label
          __self="[object Object]"
          __source="[object Object]"
          class="msg label"
          data="[object Object]"
          data-tooltip="expand"
          id="list2"
        />
      </li>
      <li
        __self="[object Object]"
        __source="[object Object]"
      >
        <label
          __self="[object Object]"
          __source="[object Object]"
          class="msg label"
          data="[object Object]"
          data-tooltip="expand"
          id="list3"
        />
      </li>
    </ul>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
